--- a/apps/mobile_web/pubspec.yaml
+++ b/apps/mobile_web/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   intl: ^0.20.2
   flutter_svg: ^2.2.3
   image_picker: ^1.2.1
+  google_fonts: ^6.2.1
   # pdf_viewer_plugin: ^2.0.1  # Temporarily removed due to Gradle compatibility issue
 
 dev_dependencies:
@@ -68,6 +69,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/images/onboarding/
     - assets/icons/
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -76,22 +78,5 @@ flutter:
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/to/asset-from-package
 
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/to/font-from-package
+  # Using Google Fonts package - fonts will be automatically downloaded
+  # Fonts: Frank Ruhl Libre (for titles) and Lato (for body text)
