--- a/apps/mobile_web/pubspec.yaml
+++ b/apps/mobile_web/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   google_fonts: ^6.2.1
   signature: ^5.4.0
   camera: ^0.11.0+2
+  video_player: ^2.8.6
+  flutter_dotenv: ^5.1.0
   # pdf_viewer_plugin: ^2.0.1  # Temporarily removed due to Gradle compatibility issue
 
 dev_dependencies:
@@ -74,6 +76,7 @@ flutter:
     - assets/images/
     - assets/images/onboarding/
     - assets/icons/
+    - .env
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
