--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@expo/ngrok": "^4.1.3",
     "@types/jest": "^29.5.12",
     "@types/node": "^22.9.0",
     "@types/react": "~18.2.45",
