--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "audit:gestures": "ts-node scripts/gesture-audit.ts"
   },
   "jest": {
     "preset": "jest-expo"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.3",
+    "@lottiefiles/react-lottie-player": "^3.6.0",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-firebase/app": "^21.6.0",
     "@react-native-firebase/auth": "^21.6.0",
@@ -40,6 +42,7 @@
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
+    "firebase": "^12.7.0",
     "lottie-react-native": "6.7.0",
     "moment": "^2.30.1",
     "moment-duration-format": "^2.3.2",
@@ -83,6 +86,7 @@
     "react-native-svg-transformer": "^1.5.0",
     "react-test-renderer": "18.2.0",
     "tailwindcss": "^3.3.2",
+    "ts-node": "^10.9.2",
     "typescript": "~5.3.3"
   },
   "private": true
