--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "expo-location": "~17.0.1",
     "expo-router": "~3.5.24",
     "expo-splash-screen": "~0.27.7",
+    "expo-sqlite": "~14.0.6",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
