--- a/ingestion-platform/package.json
+++ b/ingestion-platform/package.json
@@ -30,7 +30,8 @@
     "@fastify/cors": "^8.5.0",
     "@fastify/multipart": "^8.3.1",
     "@fastify/rate-limit": "^9.1.0",
-    "@prisma/client": "^5.19.1",
+    "@prisma/adapter-pg": "^7.2.0",
+    "@prisma/client": "^7.2.0",
     "@types/cheerio": "^0.22.35",
     "@xenova/transformers": "^2.17.2",
     "axios": "^1.13.2",
@@ -42,6 +43,7 @@
     "ioredis": "^5.4.1",
     "node-cron": "^3.0.3",
     "p-limit": "^4.0.0",
+    "pg": "^8.13.1",
     "playwright": "^1.57.0",
     "rss-parser": "^3.13.0",
     "uuid": "^9.0.1",
@@ -53,10 +55,11 @@
     "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^8.15.0",
     "@typescript-eslint/parser": "^8.15.0",
+    "@types/pg": "^8.11.10",
     "concurrently": "^9.2.1",
     "eslint": "^9.15.0",
-    "prisma": "^5.19.1",
+    "prisma": "^7.2.0",
     "tsx": "^4.19.2",
-    "typescript": "^5.6.3"
+    "typescript": "^5.7.2"
   }
 }
