--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,5 +17,13 @@
                 "variables": true
             }
         ]
+    },
+    "settings": {
+        "import/resolver": {
+            "typescript": {
+                "alwaysTryTypes": true,
+                "project": "./tsconfig.json"
+            }
+        }
     }
 }
