--- a/ingestion-platform/package.json
+++ b/ingestion-platform/package.json
@@ -32,6 +32,8 @@
     "@fastify/rate-limit": "^9.1.0",
     "@prisma/adapter-pg": "^7.2.0",
     "@prisma/client": "^7.2.0",
+    "@sentry/node": "^10.34.0",
+    "@sentry/profiling-node": "^10.34.0",
     "@types/cheerio": "^0.22.35",
     "@xenova/transformers": "^2.17.2",
     "axios": "^1.13.2",
@@ -52,12 +54,14 @@
   "devDependencies": {
     "@types/node": "^22.9.0",
     "@types/node-cron": "^3.0.11",
+    "@types/pg": "^8.11.10",
     "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^8.15.0",
     "@typescript-eslint/parser": "^8.15.0",
-    "@types/pg": "^8.11.10",
     "concurrently": "^9.2.1",
     "eslint": "^9.15.0",
+    "pino": "^10.2.0",
+    "pino-pretty": "^13.1.3",
     "prisma": "^7.2.0",
     "tsx": "^4.19.2",
     "typescript": "^5.7.2"
