--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "web": "expo start --web",
     "test": "jest --watchAll",
     "lint": "expo lint",
+    "typecheck": "tsc --noEmit",
     "audit:gestures": "ts-node scripts/gesture-audit.ts"
   },
   "jest": {
@@ -26,6 +27,7 @@
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.4.1",
     "@reduxjs/toolkit": "^2.3.0",
+    "@sentry/react-native": "~5.24.3",
     "axios": "^1.7.7",
     "expo": "~51.0.39",
     "expo-blur": "~13.0.3",
@@ -33,6 +35,7 @@
     "expo-dev-client": "~4.0.29",
     "expo-device": "~6.0.2",
     "expo-font": "~12.0.10",
+    "expo-image": "~1.13.0",
     "expo-image-picker": "~15.1.0",
     "expo-linear-gradient": "~13.0.2",
     "expo-linking": "~6.3.1",
@@ -80,6 +83,9 @@
     "@types/react-native-snap-carousel": "^3.8.11",
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.7",
+    "eslint-config-expo": "~7.1.2",
+    "eslint-import-resolver-typescript": "^4.4.4",
+    "eslint-plugin-import": "^2.32.0",
     "expo-module-scripts": "^3.5.2",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
